--- a/pom.xml
+++ b/pom.xml
@@ -239,4 +239,15 @@
         </profile>
     </profiles>
 
+
+    <distributionManagement>
+        <repository>
+            <id>releases</id>
+            <url>http://172.22.5.8:8081/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <url>http://172.22.5.8:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
