Updates to latest Infinispan LTS minor of 15.0 (#2839)
Upgrade to 15.0.14.Final

(cherry picked from commit ee7b3da428806c1a96ad01a60483b3b6496d035c)

--- a/langchain4j-infinispan/pom.xml
+++ b/langchain4j-infinispan/pom.xml
@@ -41,6 +41,12 @@
         <dependency>
             <groupId>org.infinispan</groupId>
             <artifactId>infinispan-client-hotrod</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jboss.logging</groupId>
+                    <artifactId>jboss-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
