Fix build after apache-poi upgrade (#2849)
<!--
Thank you so much for your contribution!

Please fill in all the sections below.
Please open the PR as a draft initially. Once it is reviewed and
approved, we will ask you to add documentation and examples.
Please note that PRs with breaking changes or without tests will be
rejected.

Please note that PRs will be reviewed based on the priority of the
issues they address.
We ask for your patience. We are doing our best to review your PR as
quickly as possible.
Please refrain from pinging and asking when it will be reviewed. Thank
you for understanding!
-->

## Issue
<!-- Please specify the ID of the issue this PR is addressing. For
example: "Closes #1234" or "Fixes #1234" -->

After this upgrade
https://github.com/langchain4j/langchain4j/commit/fa6b02c50182331124112efcf7956364bb97bb5f
the build fails with this error message

```
[ERROR] Failed to execute goal org.apache.maven.plugins:maven-enforcer-plugin:3.5.0:enforce (enforce) on project langchain4j-document-parser-apache-poi:
[ERROR] Rule 1: org.apache.maven.enforcer.rules.dependency.DependencyConvergence failed with message:
[ERROR] Failed while enforcing releasability.
[ERROR]
[ERROR] Dependency convergence error for commons-io:commons-io:jar:2.18.0 paths to dependency are:
[ERROR] +-dev.langchain4j:langchain4j-document-parser-apache-poi:jar:1.0.0-beta3-SNAPSHOT
[ERROR]   +-org.apache.poi:poi:jar:5.4.0:compile
[ERROR]     +-commons-io:commons-io:jar:2.18.0:compile
[ERROR] and
[ERROR] +-dev.langchain4j:langchain4j-document-parser-apache-poi:jar:1.0.0-beta3-SNAPSHOT
[ERROR]   +-org.apache.poi:poi-ooxml:jar:5.4.0:compile
[ERROR]     +-org.apache.commons:commons-compress:jar:1.27.1:compile
[ERROR]       +-commons-io:commons-io:jar:2.16.1:compile
[ERROR] and
[ERROR] +-dev.langchain4j:langchain4j-document-parser-apache-poi:jar:1.0.0-beta3-SNAPSHOT
[ERROR]   +-org.apache.poi:poi-ooxml:jar:5.4.0:compile
[ERROR]     +-commons-io:commons-io:jar:2.18.0:compile
[ERROR] and
[ER

--- a/document-parsers/langchain4j-document-parser-apache-poi/pom.xml
+++ b/document-parsers/langchain4j-document-parser-apache-poi/pom.xml
@@ -34,6 +34,12 @@
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>${apache.poi.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-io</groupId>
+                    <artifactId>commons-io</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
