--- a/http-clients/langchain4j-http-client-jdk/pom.xml
+++ b/http-clients/langchain4j-http-client-jdk/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dev.langchain4j</groupId>
         <artifactId>langchain4j-parent</artifactId>
-        <version>1.0.0-beta3</version>
+        <version>1.0.0-beta4-SNAPSHOT</version>
         <relativePath>../../langchain4j-parent/pom.xml</relativePath>
     </parent>
 
