--- a/langchain4j-parent/pom.xml
+++ b/langchain4j-parent/pom.xml
@@ -687,6 +687,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.14.0</version>
                 <configuration>
                     <annotationProcessorPaths>
                         <path>
