--- a/langchain4j-bom/pom.xml
+++ b/langchain4j-bom/pom.xml
@@ -31,6 +31,12 @@
 
             <dependency>
                 <groupId>dev.langchain4j</groupId>
+                <artifactId>langchain4j-kotlin</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>dev.langchain4j</groupId>
                 <artifactId>langchain4j-http-client</artifactId>
                 <version>${project.version}</version>
             </dependency>
