Fix Kotlin settings (#2945)
## Change
- Fix Dokka configuration with source links and directories for better
documentation generation.
- Upgraded Spotless plugin and Palantir Java Format versions for better
linting and code formatting.
- Added
[`-Werror`](https://kotlinlang.org/docs/compiler-reference.html#werror)
flag to enforce strict compiler warnings.
- Added the Kotlin compiler arguments
[`-progressive`](https://kotlinlang.org/docs/whatsnew13.html#progressive-mode)
for stricter checks.
- Updated the Apache 2.0 license URL to use HTTPS for secure access.
- Set `sourceDirectory` explicitly to make sure kotlin sources are
packaged into source-jar

## General checklist
<!-- Please double-check the following points and mark them like this:
[X] -->
- [x] There are no breaking changes
- [ ] I have added unit and/or integration tests for my change
- [ ] The tests cover both positive and negative cases
- [x] I have manually run all the unit and integration tests in the
module I have added/changed, and they are all green
- [x] I have manually run all the unit and integration tests in the
[core](https://github.com/langchain4j/langchain4j/tree/main/langchain4j-core)
and
[main](https://github.com/langchain4j/langchain4j/tree/main/langchain4j)
modules, and they are all green
<!-- Before adding documentation and example(s) (below), please wait
until the PR is reviewed and approved. -->
- [ ] I have added/updated the
[documentation](https://github.com/langchain4j/langchain4j/tree/main/docs/docs)
- [ ] I have added an example in the [examples
repo](https://github.com/langchain4j/langchain4j-examples) (only for
"big" features)
- [ ] I have added/updated [Spring Boot
starter(s)](https://github.com/langchain4j/langchain4j-spring) (if
applicable)

## Checklist for adding new maven module
<!-- Please double-check the following points and mark them like this:
[X] -->
- [ ] I have added my new module in the root `pom.xml` and
`langchain4j-bom/pom.xml`

## Checklist for adding new embe

--- a/langchain4j-kotlin/pom.xml
+++ b/langchain4j-kotlin/pom.xml
@@ -73,8 +73,6 @@
                         <id>attach-sources</id>
                         <goals>
                             <goal>jar-no-fork</goal>
-                            <!-- For getting test source -->
-                            <goal>test-jar-no-fork</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -94,6 +92,15 @@
             <plugin>
                 <groupId>org.jetbrains.dokka</groupId>
                 <artifactId>dokka-maven-plugin</artifactId>
+                <configuration combine.self="append">
+                    <sourceLinks>
+                        <link>
+                            <path>src/main/kotlin</path>
+                            <url>https://github.com/langchain4j/langchain4j/tree/main/langchain4j-kotlin/src/main/kotlin</url>
+                            <lineSuffix>#L</lineSuffix>
+                        </link>
+                    </sourceLinks>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
@@ -105,6 +112,8 @@
                 </executions>
             </plugin>
         </plugins>
+        <sourceDirectory>src/main/kotlin</sourceDirectory>
+        <testSourceDirectory>src/test/kotlin</testSourceDirectory>
     </build>
 
     <profiles>
